test/negative/parse_missing_end_iface.mut
# Negative: missing 'end' to close interface
interface IShape
    def area(self) -> i64
